asset_path for 3e-logo.png

--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -25,6 +25,6 @@
 <div id="wrapper">
   <div id="note">FUTURE SITE OF</div>
   <div id="logo">
-    <img src="/assets/3e-logo.png" width="250px" height="180px" />
+    <img src="<%= asset_path('3e-logo.png') %>" width="250px" height="180px" />
   </div>
 </div>
