add asset_path to font

--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -19,7 +19,7 @@
 
 @font-face {
         font-family: "Futura Bold";
-        src: url(/assets/futura-lt-bold.ttf) format("truetype");
+        src: url(<%= asset_path('futura-lt-bold.ttf') %>) format("truetype");
     }
 </style>
 <div id="wrapper">
