finalize placeholder page

--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -1,20 +1,23 @@
 <style>
-  html, body { background-color: #F2F2F3; }
+  html, body { background-color: black; }
   #wrapper {
     margin: 0 auto;
-    width: 330px;
+    width: 100%;
     top: 100px;
     position: relative;
   }
   #logo {
-    margin-top: 20px;
-    padding: 40px;
+    margin: 20px auto;
+    padding: 40px 40px 30px 40px;
     background-color: #F2F2F3;
+    border: 1px solid black;
+    text-align: center;
   }
   #note {
         font-family: "Futura Bold";
         text-align: center;
         font-size: 1.5em;
+        color: #F2F2F3;
     }
 
 @font-face {
